[package]
name = "lib-shlee-wasm"
version = "0.1.0"
authors = ["0xlmnt <contact@lmntl.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"
wasm-bindgen = "0.2.74"
getrandom = { version = "0.2.3", features = ["js"] }

lib-simulation = { path = "../simulation" }
