[package]
name = "lib-shlee-wasm"
version = "0.1.0"
authors = ["0xlmnt <contact@lmntl.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
getrandom = { version = "0.2.3", features = ["js"] }
serde = { version = "1.0.126", features = ["derive"] }

lib-simulation = { path = "../simulation" }
